--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1649077682618/work
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+Bottleneck @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/bottleneck_1699265217545/work
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
 Cython==3.0.6
 debugpy @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/debugpy_1699267934478/work
@@ -17,9 +18,12 @@ mkl-fft @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/mkl_ff
 mkl-random @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/mkl_random_1699239515205/work
 mkl-service==2.4.0
 nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
+numexpr @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/numexpr_1699258484110/work
 numpy @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_dfryapvjbb/croot/numpy_and_numpy_base_1701362404676/work/dist/numpy-1.26.2-cp312-cp312-macosx_10_9_x86_64.whl#sha256=49cd3da81e26182bbc42dc2de96aa0273a6a603dc26a1cbd05b2f0d2b45e7de7
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
+pandas @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_80pc5xjc2v/croot/pandas_1702317994691/work/dist/pandas-2.1.4-cp312-cp312-macosx_10_9_x86_64.whl#sha256=3eb67228f50b9e8d5582980f2be6c270d3bf7a66c1f08a7514dc2daaa6de26d6
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+patsy==0.5.4
 pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1701708255999/work
@@ -29,13 +33,17 @@ ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_160941
 pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+pytz @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pytz_1699244189577/work
 pyzmq @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pyzmq_1699288341774/work
+scipy @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/scipy_1701810578094/work/dist/scipy-1.11.4-cp312-cp312-macosx_10_9_x86_64.whl#sha256=068b13824506553db36f532be07835707cec0a8101cc56845487dd1f9d0699cd
 setuptools==69.0.2
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+statsmodels @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/statsmodels_1701813759265/work
 tornado @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/tornado_1699250848162/work
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1701095650114/work
 typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1702176139754/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1700607916581/work
 wheel==0.42.0
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
